monitoring/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "prometheus.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-kube-prometheus-stack-prometheus
          port: 9090
